Tailwind Concept & Designed Responsive Card in Tailwind

--- a/72_Tailwind_CSS/index.html
+++ b/72_Tailwind_CSS/index.html
@@ -4,19 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tailwind</title>
+    <!-- Tailwind CSS through CDN -->
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+
+    <!-- Tailwind using PostCSS plugin -->
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-        <!-- Same Size -->
-        <h1>Hello World</h1>
-        <h2>Hello World</h2>
-        <h3>Hello World</h3>
+        <!-- <h1>Tailwind Card Design</h1> -->
 
-
-        <!--  -->
-        <h1 class="underline ml-4 p-6 border">Hello World</h1>
-        <h2>Hello World</h2>
-        <h3>Hello World</h3>
-
+        <div class="mx-auto mt-4 text-center border-2 border-black rounded-md w-10/12 lg:w-3/5 min-[400px]:h-80 md:h-72 ">
+            <div class="h-1/3 text-white font-sans text-2xl content-center bg-gradient-to-r from-blue-400 to-indigo-500">
+                News you can Trust.
+            </div>
+            <div class="h-2/3 content-center">
+                <h2 class="font-bold mb-1">Stayup to date with the latest!</h2>
+                <p>Subscribe to our news letter for the latest news straight into your inbox.</p>
+                <form class="mb-2" action="">
+                    <input class="bg-slate-200 h-8 w-2/3 sm:w-2/5 lg:w-1/3 text-center mt-4 rounded-md" type="text" placeholder="you@example.com"> <br>
+                    <button class="bg-blue-400 text-white rounded-full w-2/3 sm:w-2/5 lg:w-1/3 mt-2 h-8 font-semibold">Subscribe Now</button>
+                </form>
+                <h6>We valueyour privacy</h6>
+            </div>
+        </div>
 </body>
 </html>
